@@ -1,4 +1,4 @@
-CUSTOM BLOCKS PACK READ-ME -- VERSION A21.1.001.0022
+CUSTOM BLOCKS PACK READ-ME -- VERSION A21.1.001.0023
 
 GOAL:
 
